fix(utils): fix control button vertical alignment in new footer

--- a/src/content_scripts/control_buttons.css
+++ b/src/content_scripts/control_buttons.css
@@ -43,8 +43,11 @@
 
 .xkit-control-button-container.in-new-footer .xkit-control-button {
   border-radius: 9999px;
-  width: 40px;
-  height: 40px;
+}
+
+.xkit-control-button-container.in-new-footer .xkit-control-button-inner {
+  display: flex;
+  padding: 8px;
 }
 
 @media (max-width: 990px) {
